JVM crash when currency set on MacOS 10.10 and earlier

XMLWordPrintable

    • b15
    • 10
    • b28
    • x86
    • os_x
    • Not verified

      Java is crashing on command java --version itself.

      OS Details:
      ProductName: Mac OS X
      ProductVersion: 10.10.5
      BuildVersion:14F2109

      Steps to reproduce:
      Install or unzip jdk-10 binary(tested with build 22, 23, 24)
      run java --version

      Error Message(Attached full error log):
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007fff8164a380, pid=55488, tid=3591
      #
      # JRE version: (10.0+24) (build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (10-ea+24, mixed mode, tiered, compressed oops, g1 gc, bsd-amd64)
      # Problematic frame:
      # C [libsystem_platform.dylib+0x1380] _platform_memmove$VARIANT$Nehalem+0x40
      #
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      # The crash happened outside the Java Virtual Machine in native code.
      # See problematic frame for where to report the bug.

      Regression Details:
      JDK9 build 181 - PASS
      JDK10 build 22,23,24- Failed

      Reproduciblity:
      Reproducible consistently in one machine.
      I couldn't reproduce any other machine.

            Assignee:
            Brent Christian
            Reporter:
            Abdul Kolarkunnu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: