8187772: JVM crash when currency set on MacOS 10.10 and earlier

Reviewed-by: naoto